<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background_color">
    <TableRow android:gravity="center_horizontal">
        <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:id="@+id/txt_error"
	        android:textSize="18sp"
	        android:lines="2"
	        android:paddingLeft="8dp"
	        android:textColor="@color/red"
	        android:visibility="gone"/>
    </TableRow>
    <TableRow>
        <EditText
            style="@style/input_field"
	        android:id="@+id/edt_fullname"
	       	android:inputType="textPassword"
	        android:hint="@string/fullname" />
    </TableRow>
    <TableRow>
        <EditText
            style="@style/input_field"
	        android:id="@+id/edt_username"
	        android:hint="@string/username" />
    </TableRow>
    <TableRow>
        <EditText
            style="@style/input_field"
	        android:id="@+id/edt_password"
	       	android:inputType="textPassword"
	        android:hint="@string/password" />
    </TableRow>
    <TableRow>
        <EditText
            style="@style/input_field"
	        android:id="@+id/edt_confirm_password"
	       	android:inputType="textPassword"
	        android:hint="@string/confirm_password" />
    </TableRow>
    <TableRow>
        <EditText
            style="@style/input_field"
	        android:id="@+id/edt_email"
	       	android:inputType="textEmailAddress"
	        android:hint="@string/email" />
    </TableRow>
    <LinearLayout android:gravity="center" android:padding="10dp">
        <Button style="@style/button_style"
	        android:id="@+id/btn_save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:text="@string/register" />
    </LinearLayout>
</TableLayout>